-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0, 5.9.0 Alpha
-
9c515a6de24bc8d5709136cc099ceeae8e3e642c
This is regression from Qt 5.7 to 5.8.
Steps to reproduce the issue:
1. Run attached test application
2. Click "Open page" button
3. Click on "Pop" button
Expected outcome:
Application doesn't crash
Actual outcome:
Application crashes
Notes:
When the array is commented out from the test application the crash doesn't occur. Also enabling dynamicRoles seems to work as a workaround.
Tested on:
macOS 10.11 -> crashes every time
Windows -> crashes 1/3 times
For Gerrit Dashboard: QTBUG-59704 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
200786,4 | Do not (dis)connectNotify on dynamically created model item objects | 5.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |