src/qml/qml/qqmlnotifier.cpp
@@ -117,7 +117,7 @@ void QQmlNotifier::emitNotify(QQmlNotifierEndpoint *endpoint, void **a)
     \a sourceSignal MUST be in the signal index range (see QObjectPrivate::signalIndex()).
     This is different from QMetaMethod::methodIndex().
 */
-void QQmlNotifierEndpoint::connect(QObject *source, int sourceSignal, QQmlEngine *engine)
+void QQmlNotifierEndpoint::connect(QObject *source, int sourceSignal, QQmlEngine *engine, bool doNotify)
 {
     disconnect();
 
@@ -142,8 +142,11 @@ void QQmlNotifierEndpoint::connect(QObject *source, int sourceSignal, QQmlEngine
     QQmlPropertyPrivate::flushSignal(source, sourceSignal);
     QQmlData *ddata = QQmlData::get(source, true);
     ddata->addNotify(sourceSignal, this);
-    QObjectPrivate * const priv = QObjectPrivate::get(source);
-    priv->connectNotify(QMetaObjectPrivate::signal(source->metaObject(), sourceSignal));
+    if (doNotify) {
+        needsConnectNotify = doNotify;
+        QObjectPrivate * const priv = QObjectPrivate::get(source);
+        priv->connectNotify(QMetaObjectPrivate::signal(source->metaObject(), sourceSignal));
+    }
 }
 
 QT_END_NAMESPACE
